--- a/css/styles.css
+++ b/css/styles.css
@@ -1,63 +1,149 @@
 body {
-    background-color:none; 
+    background-color:#fff; 
+    font-family:'lato', sans-serif;
 }
 
 #header {
     width:100%;
-    background-color:lightgoldenrodyellow; 
-    min-height: 80px;
+    background-color:none;
+    min-height:  100 px; 
+
 }
 
 #header > h1 {
     width: 100%;
-    margin: 0;
     text-align: center;
     font-family: sans-serif;
     position: relative;
     transform: translateY(50%);
 }
 
-#nav {
-    width:100%;
-    background-color:none; 
-    max-height: 2000px;
-    font-family: sans-serif;
-    height: auto;
-    display: flex;
-}
 
+#nav {
+    width: 100%;
+    background-color:lightgoldenrodyellow;
+    min-height: 80px;
+    /* width: 100%; */
+    font-family: sans-serif;
+    height: auto; 
+}
 #nav > ul {
     text-align: center;
-    padding: 15px 0 15px 0;
+    padding: 0;
     margin: 0;
+    transform: translateY(50%);
 }
 
 #nav > ul > button {
     min-width: 120px;
     color: white;
-    background-color: pink;
+    background-color:pink;
     border: none;
     padding: 15px 32px;
+    transition: background-color .25s;
+}
+
+#nav > ul > button:hover {
+    background-color:#1FE3FA;
+    
 }
 
 .menu {
-    display: flex;
-    background:aliceblue; 
+  display:flex;
+    background:none;
     justify-content: space-around;
     list-style-type: none;
-    margin: 0; 
+    margin:0;
+}
+
+#middle-wrapper-width {
+    display: flex;
+    font-family: 'lato', sans-serif;
+    max-width: 960px;
+    margin: 0 auto;
+}
+#middle-wrapper {
+    
+}
+.side-by-side {
+    display:flex
+        
+}
+
+
+#main-content-wrapper .image-content {
+    text-align: center; 
 }
 
 .image-content > img {
-    width:200px;
-    display: flex;
-
+    max-width: 200px;
+    border-radius: 50% 
+}
+#main-content-wrapper article h2 {
+   text-align: center;
+}
+#main-content-wrapper article p {
+    margin:0 auto; 
+}
+.image-content > h4 {
+    font-family: 'lato', sans-serif;
+    font-weight: 300; 
+    color:#1FE3FA;
 }
 
-.side-by-side {
-    max-width: 200px;
-    max-height: 200px;
-    display: flex; 
+.imag-content > h4 > a:hover {
+    color:#1F00FA;
+}
+#main-content-wrapper #skills {
+    text-align: center;
+    font-weight: 300;
+    letter-spacing: 2px;
+}
+#main-content-wrapper #skills span {
+    font-weight: 400;
+}
+#aside-content-wrapper {
+    background-color:#fff;
+    width:35%;
+    font-family: 'lato', sans-serif;
+}
+#aside-right{
+    margin: 0 50px 0 8px;
+}
+#aside-right h3 {
+   text-align: center;
+}
+#options {
+    list-style-type:none;
+}
+
+#options > li {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    width: 100%;
+    border-bottom: 1px black solid;
+}
+
+#options >li:before {
+    content:'';
+    border-color: transparent lightpink;
+    border-style: solid; 
+    border-width: .35em 0 .35em .45em;
+    display:block;
+    height:0;
+    width:0;
+    left: -1em;
+    top:.9em;
+    position:relative;
+}
+ 
+
+#favorite-sites ul {
+   list-style-type:none;
+    display:flex;
+    justify-content: space-around;
+    margin:0;
+    padding: 40px; 
 }
 
 footer {
@@ -66,4 +152,9 @@ footer {
     font-family:'lato', sans-serif;
     min-height: 100px;
     
+}
+
+footer > h1{  
+    margin: 0;
+    transform: translateY(50%)
 }
