--- a/css/styles.css
+++ b/css/styles.css
@@ -94,12 +94,12 @@ body {
 .imag-content > h4 > a:hover {
     color:#1F00FA;
 }
-#main-content-wrapper #skills {
+#main-content-wrapper #locations {
     text-align: center;
     font-weight: 300;
     letter-spacing: 2px;
 }
-#main-content-wrapper #skills span {
+#main-content-wrapper #locations span {
     font-weight: 400;
 }
 #aside-content-wrapper {
@@ -125,7 +125,7 @@ body {
 }
 
 #options >li:before {
-    content:'';
+    content:'options';
     border-color: transparent lightpink;
     border-style: solid; 
     border-width: .35em 0 .35em .45em;
